src/objects/Call_Topic_Access__c.object
<CustomObject>
    <fields>
        <fullName>Call_Topic_Group__c</fullName>
        <label>Call Topic Group</label>
        <picklist>
            <picklistValues>
                <fullName>Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auths and Referrals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eligibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materials &amp; Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proactive Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Topic__c</fullName>
        <globalPicklist>Topic</globalPicklist>
        <label>Call Topic</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Detail_Page__c</fullName>
        <label>Detail Page</label>
        <picklist>
            <picklistValues>
                <fullName>Member Detail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Producer Detail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Detail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider Detail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Not Found</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Except_To_Roles__c</fullName>
        <description>roles from this list is not able to access the call topic</description>
        <label>Except To Roles</label>
        <picklist>
            <picklistValues>
                <fullName>ACET Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET CSO Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET CSS Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET DCSM Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET Rapid Responder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Site Director-Member CCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Manager-Member CCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Supervisor/Coach/SME-Member CCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Agent-Member CCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Site Director-Member Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Manager-Member Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Supervisor/Coach/SME-Member Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Agent-Member Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Site Director-Provider Clerical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Manager-Provider Clerical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Supervisor/Coach/SME-Provider Clerical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Agent-Provider Clerical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Site Director-Provider Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Manager-Provider Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Supervisor/Coach/SME-Provider Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Agent-Provider Rework</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Limit_To_Roles__c</fullName>
        <description>Only roles from the list can access to the calltopic</description>
        <label>Limit To Roles</label>
        <picklist>
            <picklistValues>
                <fullName>ACET Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET CSO Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET CSS Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET DCSM Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET Rapid Responder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Site Director-Member CCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Manager-Member CCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Supervisor/Coach/SME-Member CCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Agent-Member CCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Site Director-Member Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Manager-Member Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Supervisor/Coach/SME-Member Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Agent-Member Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Site Director-Provider Clerical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Manager-Provider Clerical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Supervisor/Coach/SME-Provider Clerical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Agent-Provider Clerical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Site Director-Provider Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Manager-Provider Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Supervisor/Coach/SME-Provider Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office Agent-Provider Rework</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Originator_Type__c</fullName>
        <label>Originator Type</label>
        <picklist>
            <picklistValues>
                <fullName>Group/Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Producer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UHG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlisted Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>VF_Page_Name__c</fullName>
        <label>VF Page Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Call Topic Access</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>Call_Topic__c</columns>
        <columns>Detail_Page__c</columns>
        <columns>Originator_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All1</label>
    </listViews>
    <nameField>
        <label>Call Topic Access Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Topic Access</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>